--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- Kapsayıcı Div Başlangıcı -->
-    <div class="flex">
+    <div id="giris" class="flex">
         <!-- İlk Kısım Başlangıcı -->
         <h1>Mert İLTER</h1>
         <h3>Hakkımda</h3>
@@ -23,20 +23,43 @@
             uğraşmakla geçti.Bilgisayara olan ilgim
             küçüklükten beri var siber güvenlik üzerine uzun süre kafa yorduktan sonra yazılım alanında kendimi
             geliştirmeye karar verdim.Web yazılım ile ilgileniyorum
-            ilgilendiğim dil ve teknolojiler Javascript - Node.js - MySql - ExpressJS - Prisma ORM - VueJS - NuxtJS -
-            HTML - CSS - Bootstrap5 - TailwindCSS - Bulma.io
-            bütün bunlarla ilgilenirken tecrübe eksikliklerim olduğunun farkındayım ve kendimi daha çok geliştirmek bir
-            iş sahibi olmak istiyorum bu isteğim doğrultusunda
-            araştırmalarım sonucu Kodluyoruz'u keşfettim çok sıcak bir söyleşide tanıdım kendilerini vakit kaybetmeden
-            başvurdum. Yukarıda belirttiğim dil ve teknolojilerle
-            kendimi geliştirmek için aktif olarak ilgileniyorum yeni şeyler öğrenmeyi kendimi geliştirmeyi seviyorum
-            herşeyden önce bu alanda bir mesleğim olması için çabalıyorum.
         </p>
         <!-- İlk Paragraf Bitişi -->
+        <!-- İlgi Alanları Başlangıç -->
+        <div id="ilgi-alanlari">
+            <h3>İlgi Alanlarım</h3>
+            <!-- Filmler -->
+            <h5>1.Film</h5>
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt3659388/">The Martian</a></li>
+                <li>John Wick</li>
+                <li>Fury</li>
+            </ul>
+            <!-- Filmler Bitiş -->
+            <!-- Diziler -->
+            <h5>2.Dizi</h5>
+            <ul>
+                <li><a href="https://www.imdb.com/title/tt2467372/?ref_=nv_sr_srsg_0">Brooklyn Nine-Nine</a></li>
+                <li>How i meet your mother</li>
+                <li>Cobra Kai</li>
+            </ul>
+            <!-- Diziler Bitiş -->
+            <!-- Kitaplar -->
+            <h5>3.Kitap</h5>
+            <ul>
+                <li><a href="https://www.goodreads.com/tr/book/show/161503.Crimson_Rivers">Crimson Rivers</a></li>
+                <li>Murder on the Orient Express</li>
+                <li>Arsene Lupin, Gentleman-Thief</li>
+            </ul>
+            <!-- Kitaplar Bitiş -->
+        </div>
         <!-- İkinci Kısım Başlangıcı -->
         <h2>Sevdiğim Film</h2>
         <h3>The Martian</h3>
         <!-- 2. Paragraf Başlangıcı -->
+        <figure>
+            <img src="./images/martian.jpg" alt="The Martian 2015">
+        </figure>
         <p>Dizi de Mars'ta mahsur kalan bir astronotun hayatını idam ettirebilme kabiliyetini ve bir insanın neler
             yapabileceğini konu alıyor
             yazılım konusunda kendimi başrolde ki aktör gibi hissediyorum ve bende onun Mars'ta ki özverisini kendime
@@ -44,6 +67,7 @@
             hergün üstüne koyarak devam ediyorum
         </p>
         <!--2. Paragraf Bitişi -->
+
     </div>
     <!-- Kapsayıcı Div bitişi -->
 </body>
